# filter-crop

./: .gitignore  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  RELEASE.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  create-release.yaml
build-include/: filter.mk
docs/: _PUBLISHING_PATH  _category_.json  overview.md
filter_crop/: filter.py
scripts/: filter_usage.py
tests/: test_filter_crop.py  test_integration_config_normalization.py  test_smoke_simple.py
