[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["filter_crop"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project]
name = "filter_crop"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]

dependencies = [
  "openfilter[all]>=0.1.16,<0.2.0"
]

[project.optional-dependencies]
dev = [
  "build==1.2.1",
  "setuptools==80.9.0",
  "twine>=6.1.0,<7",
  "wheel==0.45.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0"
]

[[tool.uv.index]]
name = "openfilter"
url = "https://python.openfilter.io/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
